feat - 登陆页面样式修改

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -55,7 +55,7 @@
             </div>
             <div class="usernameWrapDiv">
                 <div class="submitLabel">
-                    <label>没有账号？<a href="#" id="loginRegister">点击注册</a></label>
+                    <label>没有账号？<a href="#" id="loginRegister"; style="color: #cf2d28">点击注册</a></label>
                 </div>
                 <div class="submitDiv">
                     <input id="loginBtn" type="button" class="submit layui-btn layui-btn-primary" value="登录"></input>
